# lithium

./: README.md  msg.db
core/: Cargo.toml
core/src/: identity.rs  lib.rs  storage.rs
tui/: Cargo.toml  msg.db
tui/src/: main.rs
